tests/typing/fail/clock-09.stderr
error: clock error: the true branch isn't merged on the right clock
 --> tests/typing/fail/clock-09.rs:9:21
  |
9 |             true => 3.0 when c2,
  |                     ^^^^^^^^^^^
  |
  = note: the last clock of the true branch is c2
help: the clock to be merged on is c1
 --> tests/typing/fail/clock-09.rs:8:27
  |
8 |         a : float = merge c1 {
  |                           ^^
